--- a/src/pylowl/proj/brightside/shdp/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/shdp/postproc/subgraphs.html
@@ -78,7 +78,7 @@ var lookup_node = function(node, n) {
     return nested_node
 }
 
-update_graphs = function() {
+var update_graphs = function() {
     $update_nav_text();
 
     var graphs_container = document.getElementById("graphs_container");
