--- a/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
+++ b/src/pylowl/proj/brightside/m0/postproc/subgraphs.html
@@ -89,16 +89,16 @@ var diagonal = d3.svg.diagonal()
     .projection(function(d) { return [d.y, d.x]; })
     .source(function (d) {
         var s = Object.create(d.source);
-        s.y += node_size(s);
+        s.y += $node_size(s);
         return s;
     })
     .target(function (d) {
         var t = Object.create(d.target);
-        t.y -= node_size(t);
+        t.y -= $node_size(t);
         return t;
     });
 
-update_graphs = function() {
+var update_graphs = function() {
     $update_nav_text();
 
     var graphs_container = document.getElementById("graphs_container");
@@ -151,7 +151,7 @@ update_graphs = function() {
               d.y + "," + d.x + ")"; });
 
         node.append("circle")
-		.attr("r", function(d){return node_size(d);})
+		.attr("r", $node_size)
         .style("fill", function(d) {return d.active ?
                ramp(d.Elogpi) : "black"})
         .style("stroke", function(d) {return d.active ?
@@ -169,14 +169,14 @@ update_graphs = function() {
         .style("fill-opacity", "0")
 		.on("click", function(d){$filter_node_first(d); update_graphs();})
         .append("title")
-        .text(format_words);
+        .text($format_words);
 
         if(document.getElementById("showValues").checked == true){
 			node.append("foreignObject")
 				.attr("width", 200)
 				.attr("height", 30)
 				.append("xhtml:body")
-				.html(add_lambda_ss_text(10));
+				.html($add_lambda_ss_text(10));
         }
     }
 }
@@ -186,13 +186,13 @@ d3.json("graph.json", function(error, graph_root) {
     d3.json("subgraphs.json", function(error, root) {
         $num_graphs = root.length;
         $root = root;
-        node_placement_rootParent();
-        $maxNodeSize = maximum_Node_Size_rootParent($root);
-        $minELogPi = minimum_param_rootParent($root, "Elogpi");
-        $maxELogPi = maximum_param_rootParent($root, "Elogpi");
+        $set_subtrees_node_placement();
+        $maxNodeSize = $max_subtrees_param($root, $node_size);
+        $minELogPi = $min_subtrees_param($root, function(node) {return node.Elogpi;});
+        $maxELogPi = $max_subtrees_param($root, function(node) {return node.Elogpi;});
 
-        $width = $maxNodeSize * 16 * (tree_depth(root[0]["subtree"]) + 1) + $maxNodeSize;
-        var sizes = tree_size_per_level(root[0]["subtree"]);
+        $width = $maxNodeSize * 16 * ($tree_depth(root[0]["subtree"]) + 1) + $maxNodeSize;
+        var sizes = $tree_size_per_level(root[0]["subtree"]);
         var eff_size = sizes[sizes.length - 1] + (sizes.length > 1 ? sizes[sizes.length - 2] : 0);
         $height = $maxNodeSize * 2.5 * eff_size + $maxNodeSize;
 
